fix: used tailwind for dark mode

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -363,36 +363,3 @@ body {
     border-color: #aaa;
   }
 }
-
-
-
-.widget {
-  background-color: rgb(244 244 245);
-  color: #1D1F34;
-}
-
-.dark .widget {
-  background-color:  #1D1F34;
-  color: rgb(244 244 245);
-}
-
-.dark .widget-button {
-  background-color: #1D1F34;
-  color: rgb(244 244 245);
-}
-
-.widget-button:hover {
-  background-color:rgb(228 228 231);
-}
-
-.widget-button:active {
-  background-color: rgb(212 212 216);
-}
-
-.dark .widget-button:hover {
-  background-color:  rgb(63 63 70);
-}
-
-.dark .widget-button:active {
-  background-color:  rgb(82 82 91);
-}
